@@ -122,7 +122,7 @@ inf inf inf inf ; 0 0 1 || inf inf inf inf ; 0 2 0
 *
 ************************************************************
 
-5 vertex angle structures:
+5 vertex angle structures (no restrictions):
 1 0 0 ; 0 1 0
 0 1 0 ; 1 0 0
 0 0 1 ; 0 0 1
